<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrasi"
        android:textAllCaps="true"
        android:background="#F6DF0C"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/belanja"
        android:textAllCaps="true"
        android:background="#00BCD4"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/regis"/>

    <Button
        android:id="@+id/music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musik"
        android:textAllCaps="true"
        android:background="#F44336"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/shop"/>

</androidx.constraintlayout.widget.ConstraintLayout>